#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([Cast Generator Tool],
        [1.0.0],
        [ssvc.test@webex.com],
        [ssvctest])
AC_CONFIG_SRCDIR([casegen.cpp])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_HEADERS([build-aux/config.h])
AC_PROG_RANLIB

# LT_INIT
# AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([1.11])

# Checks for programs.
# AC_PROG_CC
# AC_PROG_CXX
# AC_LANG([C++])
# AC_PROG_LIBTOOL
: ${CXXFLAGS="-g"}
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

